# PHOTOSPP

./: README.md
documentation/doxygen/: changelog.txt  mainpage.h
documentation/latex_documentation/: Photos_interface_design.bib  Photos_interface_design.cls  Photos_interface_design.tex  Photos_program_summary.tex  interface_design.eps
examples/testing/: Makefile  README-benchfiles  photos_tauola_test.cxx  photos_test.cxx  test.inc
examples/testing/Htautau/: Makefile  mc-tester.benchmark.Htautau.root  pythia_H.conf
examples/testing/ScalNLO/: Makefile  pythia_Z.conf
examples/testing/Wenu/: Makefile  pythia_W.conf
examples/testing/Wmunu/: Makefile  pythia_W.conf
examples/testing/WmunuNLO/: Makefile  pythia_W_resonance_peak.conf
examples/testing/Zee/: Makefile  pythia_Z.conf
examples/testing/Zmumu/: Makefile  pythia_Z.conf
examples/testing/ZmumuNLO/: Makefile  pythia_Z_resonance_peak.conf
examples/testing/Ztautau/: Makefile
examples/testing/pairs/: Makefile  SETUP.C  Z.pairs.flat.phase.space.10M.root  mc-tester.root-Zmumu-pairs-10M
examples/testing/ttbar/: Makefile  pythia_ttbar.conf
platform/LCGCONFIG/: configure.ac
platform/LCGCONFIG/examples/: Makefile.am
platform/LCGCONFIG/examples/testing/: Makefile.am
platform/LCGCONFIG/src/: Makefile.am
